# KTB4-Harry-AI

./: .gitignore  README.md
harry-til/: 2026-05-18.md  2026-05-19.md  2026-05-20.md  (+13 more)
weekly-challenge/korean-chatbot/: .gitignore  README.md  pyproject.toml
weekly-challenge/korean-chatbot/docs/adr/: 0001-adopt-pretrained-first.md  0002-select-qwen3.md
weekly-challenge/korean-chatbot/docs/devlog/chatbot/: model-selection.md
weekly-challenge/korean-chatbot/experiments/from_scratch/: README.md
weekly-challenge/korean-chatbot/experiments/from_scratch/data/: seed_corpus.txt
weekly-challenge/korean-chatbot/experiments/from_scratch/notes/: DATASET_CONSIDERATIONS.md  FROM_SCRATCH_AND_PYTORCH.md  TEACHING_PLAN.md
weekly-challenge/korean-chatbot/experiments/from_scratch/src/: step01_tokenizer.py  step02_dataset.py  step03_tiny_model.py  step04_train_loop.py  step05_generate.py  step06_fastapi.py
weekly-challenge/korean-chatbot/src/chatbot/: generator.py  main.py
weekly-challenge/korean-chatbot/tests/: test_main.py
weekly-challenge/week02-fastapi-community/: README.md  main.py  pyproject.toml  streamlit_app.py
weekly-challenge/week02-fastapi-community/api/routes/: posts.py
weekly-challenge/week02-fastapi-community/core/: config.py
weekly-challenge/week02-fastapi-community/database/: session.py
weekly-challenge/week02-fastapi-community/docs/: http-summary.md
weekly-challenge/week02-fastapi-community/models/: post.py
weekly-challenge/week02-fastapi-community/schemas/: post.py
weekly-challenge/week02-fastapi-community/services/: ai_summary_service.py
(+19 files in other folders)
