[project]
name = "korean-chatbot"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi[standard]>=0.138.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "chatbot"
