[project]
name = "week02-fastapi-community"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.58.0",
    "uvicorn>=0.47.0",
]
